# python-cli-base

./: .gitignore  README.md  pyproject.toml
python_cli_base/: __init__.py  __main__.py
